Comment out unused BUILDTIME argument in Dockerfile
[skip actions]

--- a/flickrdownloaderstuff/Dockerfile
+++ b/flickrdownloaderstuff/Dockerfile
@@ -15,10 +15,8 @@ ARG debian_version
 LABEL maintainer="Flickr Backup Script"
 LABEL description="Flickr Download with browser support for OAuth"
 
-
-ARG buildtime
-ENV BUILDTIME=${buildtime}
-
+#ARG buildtime
+#ENV BUILDTIME=${buildtime}
 
 # Install system packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
