Add `sipstuff` module for SIP calling with WAV playback and TTS
- Introduced `sipstuff`, a tool for placing SIP calls that supports WAV playback or text-to-speech via piper-TTS.
- Added `install_pjsip.sh` for building and installing PJSIP with Python bindings.
- Included CLI (`sipstuff/cli.py`) for calling a destination with audio or synthesized speech.
- Updated repository documentation (`README.md` and `CLAUDE.md`) with details on `sipstuff` usage and API.
- Extended Docker image to include piper-TTS in a Python 3.12 virtual environment.

[skip actions]

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,5 +43,8 @@ ruamel.yaml
 
 cachetools
 
+# piper-tts — installed in /opt/piper-venv via Python 3.12 (piper-phonemize lacks 3.14 wheels)
+pathvalidate
+
 mqttstuff==0.0.5
 reputils==0.0.16
