Introduce versioning, logging enhancements, and startup banner
- Added `__version__` to `sipstuff` for tracking build versions.
- Introduced `_print_banner()` to display startup information, including version, build time, and repository links.
- Added PJSIP logging improvements with configurable log levels routed through `loguru` and optional suppression of console output.
- Updated dependencies to include `tabulate` for formatting startup information.
- Enhanced SIP call logic with better WAV player control during inter-delays.

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,8 @@ ruamel.yaml
 
 cachetools
 
+tabulate
+
 # piper-tts — installed in /opt/piper-venv via Python 3.12 (piper-phonemize lacks 3.14 wheels)
 pathvalidate
 
