Add detailed docstrings for `sipstuff` classes and methods
- Expanded docstrings across `sipstuff` to provide clearer explanations of functionality, arguments, return values, and exceptions.
- Updated CLI help text and examples to improve usability and clarity.
- Introduced `types-tabulate` to dependencies for enhanced formatting capabilities.
- Enhanced WAV metadata validation and playback lifecycle documentation.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
       - id: mypy
         pass_filenames: false
         args: ["."]
-        additional_dependencies: [types-pytz, types-PyYAML, types-requests, types-cachetools]
+        additional_dependencies: [types-pytz, types-PyYAML, types-requests, types-cachetools, types-tabulate]
 
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.30.0
