Add STT support with faster-whisper integration
- Introduced speech-to-text (STT) functionality using faster-whisper for WAV transcription.
- Added `transcribe_wav` function to `sipstuff` for direct recording transcription with model configuration options.
- Updated `make_call` to support recording remote-party audio and transcription.
- Enhanced CLI with a `--record` option for saving and transcribing calls.
- Updated dependencies and documentation, including environment variables and examples, to support STT.

--- a/requirements.txt
+++ b/requirements.txt
@@ -48,5 +48,7 @@ tabulate
 # piper-tts — installed in /opt/piper-venv via Python 3.12 (piper-phonemize lacks 3.14 wheels)
 pathvalidate
 
+faster-whisper
+
 mqttstuff==0.0.5
 reputils==0.0.16
