--- a/.github/workflows/checkblack.yml
+++ b/.github/workflows/checkblack.yml
@@ -33,6 +33,6 @@ jobs:
           pip install -r requirements-dev.txt
 
       - name: "linting with black :: check only"
-        run: black -l 120 --check  .
+        run: black --check .
 
 
